--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "sideEffects": ["*.css"],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "format": "prettier --write **/*.js **/*.css",
+    "format": "prettier --write src/**/*.js src/**/*.css *.js",
     "lint": "eslint src *.js",
     "start": "webpack-dev-server --open --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js"
